--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up build environment
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libconfig++-dev
+        sudo apt-get install libsfml-dev
     - name: make
       run: make
     - name: make check
