[MOD] the difficulty is almost done its now printing an output as we want

--- a/Resources/Beatmaps/Promesse/Config.json
+++ b/Resources/Beatmaps/Promesse/Config.json
@@ -1,9 +1,9 @@
 {
-  "Name": "OurDestiny",
+  "Name": "Promesse",
   "Artist": "Aven23",
-  "FolderPath": "OurDestiny",
+  "FolderPath": "Promesse",
   "Difficulty": 42,
   "BPM": 42,
-  "id": 2,
+  "id": 1,
   "offset": 0
 }
