--- a/config/Database.cfg
+++ b/config/Database.cfg
@@ -11,7 +11,7 @@ songs = (
         {
         Name = "Promesse";
         Artist = "Aven23";
-        FolderPath = "Promiss";
+        FolderPath = "Promesse";
         Difficulty = 42;
         BPM = 42;
         id = 1;
